RESOLVED FIXED177977
RenderTable should not hold section raw pointers
https://bugs.webkit.org/show_bug.cgi?id=177977
Summary RenderTable should not hold section raw pointers
alan
Reported 2017-10-05 15:59:21 PDT
head, foot, first body.
Attachments
Patch (8.85 KB, text/plain)
2017-10-05 16:24 PDT, alan
no flags
Patch (9.61 KB, patch)
2017-10-05 16:35 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2017-10-05 16:17:22 PDT
alan
Comment 2 2017-10-05 16:24:32 PDT
alan
Comment 3 2017-10-05 16:35:45 PDT
WebKit Commit Bot
Comment 4 2017-10-05 19:41:39 PDT
Comment on attachment 322935 [details] Patch Clearing flags on attachment: 322935 Committed r222953: <http://trac.webkit.org/changeset/222953>
WebKit Commit Bot
Comment 5 2017-10-05 19:41:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.