RenderTable should not hold section raw pointers https://bugs.webkit.org/show_bug.cgi?id=177977 <rdar://problem/34846034>

Reviewed by Simon Fraser.

This enables us to remove forced recalcSections calls.

Covered by existing tests.

* rendering/RenderTable.cpp:
(WebCore::RenderTable::RenderTable):
(WebCore::resetSectionPointerIfNotBefore):
(WebCore::RenderTable::addChild):
(WebCore::RenderTable::recalcSections const):
(WebCore::RenderTable::sectionAbove const):
* rendering/RenderTable.h:
(WebCore::RenderTable::header const):
(WebCore::RenderTable::footer const):
(WebCore::RenderTable::firstBody const):
(WebCore::RenderTable::topSection const):


Canonical link: https://commits.webkit.org/194225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222953 268f45cc-cd09-0410-ab3c-d52691b4dbfc